--- a/beat.html
+++ b/beat.html
@@ -564,7 +564,7 @@
 
                     </div>
                     <div class="col-12 message">
-                        <textarea name="massage"  rows="12" placeholder="massage"></textarea>
+                        <textarea name="message"  rows="12" placeholder="message"></textarea>
                         <!-- <input type="textarea" placeholder="Message"> -->
                     </div>
                     <button class="button">send message</button>
